--- a/public_html/recipes/panncakes.html
+++ b/public_html/recipes/panncakes.html
@@ -105,6 +105,7 @@
         <textarea name="comment" placeholder="Enter your comment here" rows="10" cols="40"></textarea>
         <br><br>
         <input type="submit" value="Submit">
+         <input type="reset">
       </form> 
     </body>
 </html>
