--- a/public_html/recipes/meatballs.html
+++ b/public_html/recipes/meatballs.html
@@ -82,6 +82,7 @@
         <textarea name="comment" placeholder="Enter your comment here" rows="10" cols="40"></textarea>
         <br><br>
         <input type="submit" value="Submit">
+        <input type="reset">
       </form> 
   
         
