some comments and minor improvements.

--- a/public_html/calendar.html
+++ b/public_html/calendar.html
@@ -17,8 +17,8 @@ and open the template in the editor.
             <ul class="navleft">
                 <li><a href="index.html">Home </a> </li>
                 <li><a href="calendar.html">Calendar</a> </li>
-                <li><a href="calendar.html">Contact</a> </li>
-                <li><a href="">About</a> </li>
+                 <li><a href="recipes/meatballs.html">Meatballs</a> </li>
+                <li><a href="recipes/panncakes.html">Pancakes</a> </li>
                 <li id="signin"><a href=""> Sign In</a> </li>     
 
             </ul>                    
