--- a/public_html/recipes/meatballs.html
+++ b/public_html/recipes/meatballs.html
@@ -16,8 +16,8 @@
             <ul class="navleft">
                 <li><a href="../index.html">Home </a> </li>
                 <li><a href="../calendar.html">Calendar</a> </li>
-                <li><a href="../calendar.html">Contact</a> </li>
-                <li><a href="../calendar.html">About</a> </li>
+                <li><a href="meatballs.html">Meatballs</a> </li>
+                <li><a href="panncakes.html">Pancakes</a> </li>
                 <li id="signin"><a href="">Sign In</a> </li>     
 
             </ul>                    
@@ -81,8 +81,8 @@
         <br>
         <textarea name="comment" placeholder="Enter your comment here" rows="10" cols="40"></textarea>
         <br><br>
-        <input type="submit" value="Submit">
-        <input type="reset">
+        <input type="submit" class="submitbutton" value="Submit">
+        <input type="reset" class="submitbutton" value="Reset">
       </form> 
   
         
