--- a/public_html/reminders.html
+++ b/public_html/reminders.html
@@ -22,3 +22,43 @@ and open the template in the editor.
         
     </body>
 </html>
+
+
+
+
+/* Weekdays (Mon-Sun) */
+.weekdays {
+    margin: 5px;
+    padding: 10px 0;
+    background-color:#ddd;
+    border: 2px solid;
+}
+
+.weekdays li {
+    display: inline-block;
+    width: 14%;
+    color: #666;
+    text-align: center;
+}
+
+/* Days (1-31) */
+.days {
+    padding: 10px 0;
+    background: #eee;
+    margin: 5px;
+    border: 2px solid;
+
+}
+
+.calendar-icon {
+width: 150px;
+height: 120px;
+}
+
+   <!--  HTML5 introduced a method to let web designers take control over the viewport, through the <meta> tag. 
+        The viewport is the user's visible area of a web page. It varies with the device, and will be smaller on a 
+        mobile phone than on a computer screen. Setting viewport gives the browser ins on how to control the pages 
+   dimensions and scaling -->
+   
+ <!--  <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+        <script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.js"></script>   -->
